--- a/proj.config
+++ b/proj.config
@@ -9,13 +9,13 @@
 # Notes:                                              #
 # 1. build column is for future feature               #
 #######################################################
-# directory         repo_name   branch  TAG         build
-- src/core/topology4 topology    master top_4.0.0    src
+# directory         repo_name    branch  TAG         build
+- src/core/topology  topology    master top_4.0.0    src
 - src/core/gpe       gpe         master gpe_4.0.0    src
 - src/core/gse       gse         master gse_2.0.0    src
 - src/third_party    third_party master latest       src
 - src/gutil          utility     master util_1.0.0   src
 - src/realtime       realtime    master real_2.0.0   src
-- src/distributed    distributed master dist_1.0.0   src
+- src/msg            msg_layer   master dist_1.0.0   src
 - src/er             er          master er_1.0.0     src
 x src/prod           *      	    *      *          *
