continue the setup

--- a/proj.config
+++ b/proj.config
@@ -14,7 +14,7 @@
 - src/core/gpe       gpe         master gpe_4.0.0    src
 - src/core/gse       gse         master gse_2.0.0    src
 - src/third_party    third_party master latest       src
-- src/gutil          utility     master util_1.0.0   src
+- src/utility        utility     master util_1.0.0   src
 - src/realtime       realtime    master real_2.0.0   src
 - src/msg            msg_layer   master dist_1.0.0   src
 - src/er             er          master er_1.0.0     src
