use pull instead of fetch

--- a/proj.config
+++ b/proj.config
@@ -16,6 +16,6 @@
 - src/third_party    third_party master latest       src
 - src/utility        utility     master util_1.0.0   src
 - src/realtime       realtime    master real_2.0.0   src
-- src/msg            msg_layer   master dist_1.0.0   src
+- src/msg            msg_layer   master msg_1.0.0    src
 - src/er             er          master er_1.0.0     src
 x src/prod           *      	    *      *          *
