--- a/proj.config
+++ b/proj.config
@@ -18,4 +18,4 @@
 - src/realtime       realtime    master real_2.0.0   src
 - src/msg            msg_layer   master msg_1.0.0    src
 - src/er             er          master er_1.0.0     src
-x src/prod           *      	    *      *          *
+x src/prod           product     poc_xyz  *          * 
