--- a/proj.config
+++ b/proj.config
@@ -10,12 +10,11 @@
 # 1. build column is for future feature               #
 #######################################################
 # directory         repo_name    branch  TAG         build
-- src/core/topology  topology    master top_4.0.0    src
-- src/core/gpe       gpe         master gpe_4.0.0    src
-- src/core/gse       gse         master gse_2.0.0    src
+- src/core/topology  topology    master latest    src
+- src/core/gpe       gpe         master latest    src
+- src/core/gse       gse         master latest    src
 - src/third_party    third_party master latest       src
-- src/utility        utility     master util_1.0.0   src
-- src/realtime       realtime    master real_2.0.0   src
-- src/msg            msg_layer   master msg_1.0.0    src
-- src/er             er          master er_1.0.0     src
-x src/prod           product     poc_xyz  *          * 
+- src/utility        utility     master latest   src
+- src/realtime       realtime    master latest   src
+- src/msg            msg_layer   master latest    src
+- src/er             er          master latest     src
