port the zmq related code to poc4_base (the code should have no influence on the existing kafka implementation). Only when using "use_zmq=1", the related code will be compiled.

--- a/src/customer/core_ext/gpe/SConscript
+++ b/src/customer/core_ext/gpe/SConscript
@@ -3,10 +3,14 @@
 Import('env')
 
 # TODO: 
+if int(ARGUMENTS.get('use_zmq', 0)) == 1:
+    env.Append(CPPDEFINES={'USE_ZMQ':1})
+
 src_files = Split("""gperun.cpp
                      gpeconfig.cpp
                      enginejoblistener.cpp
                      enginejobrunner.cpp
+                     enginejobrunner_zmq.cpp
                      ../../../core/gse/gse2/dict/enum/RedisEnumeratorClient.cpp
 				  """)
 
