--- a/config/pkg.config
+++ b/config/pkg.config
@@ -16,5 +16,7 @@ cp build/release/customer/core_ext/gse/gse_loader ${GSQL_PKG_HOME}/bin
 
 
 mkdir -p ${GSQL_PKG_HOME}/third-party-pkgs
-src/er/buildenv/rest_build.sh ${GSQL_PKG_HOME}/third-party-pkgs
+${ER_HOME}/buildenv/rest_build.sh ${GSQL_PKG_HOME}/third-party-pkgs
 
+mkdir -p ${GSQL_PKG_HOME}/config
+cp ${GSQL_PROJ_HOME}/src/customer/config/graph_config.yaml ${GSQL_PKG_HOME}/config
