--- a/config/pkg.config
+++ b/config/pkg.config
@@ -19,4 +19,8 @@ mkdir -p ${GSQL_PKG_HOME}/third-party-pkgs
 ${ER_HOME}/buildenv/rest_build.sh ${GSQL_PKG_HOME}/third-party-pkgs
 
 mkdir -p ${GSQL_PKG_HOME}/config
-cp ${GSQL_PROJ_HOME}/src/customer/config/graph_config.yaml ${GSQL_PKG_HOME}/config
+cp -r ${GSQL_PROJ_HOME}/src/customer/config/* ${GSQL_PKG_HOME}/config
+
+mkdir -p ${GSQL_PKG_HOME}/scripts
+cp -r ${GSQL_PROJ_HOME}/src/customer/scripts/* ${GSQL_PKG_HOME}/scripts
+
