[ER-8]: Separated out udt.cpp to avoid linker errors

--- a/src/customer/core_ext/gpe/SConscript
+++ b/src/customer/core_ext/gpe/SConscript
@@ -12,6 +12,7 @@ src_files = Split("""gperun.cpp
                      enginejobrunner.cpp
                      enginejobrunner_zmq.cpp
                      ../../../core/gse/gse2/dict/enum/RedisEnumeratorClient.cpp
+                     ../../core_impl/udt.cpp
 				  """)
 
 gperun_server_build = env.Program(target='poc_gpe_server', 
