[TANGO-2] list compilation defines: G_DENSE_HT_OCCUPANCY_PCT is the compilation value for google densehashMap

--- a/config/pkg.config
+++ b/config/pkg.config
@@ -5,6 +5,15 @@
 #  We will use the safe runner to run this            #
 #                                                     #
 #######################################################
+
+#-------- List of CPPDEFINES ------------------------------------------------------------
+# usage: --CPPDEFINES=D1,D2=x,D3=9
+#
+# - G_DENSE_HT_OCCUPANCY_PCT=80 (DenseHashMap factor: 1 to 99. Default 50, opt. is 80)
+# - GraphNodeId_UseLong_  (if # of vertices is more than 4 billion. Default is uint32_t)
+# - Degree_UseShort_      (degree use short to save space. Default is int)
+#----------------------------------------------------------------------------------------
+
 scons poc_gpe_release        cb=1 # --CPPDEFINES=GraphNodeId_UseLong_,Degree_UseShort_
 scons gse2_release           cb=1 # --CPPDEFINES=GraphNodeId_UseLong_,Degree_UseShort_
 scons poc_gseloader_release  cb=1 # --CPPDEFINES=GraphNodeId_UseLong_,Degree_UseShort_
