--- a/config/pkg.config
+++ b/config/pkg.config
@@ -27,9 +27,16 @@ cp build/release/customer/core_ext/gse/gse_loader ${GSQL_PKG_HOME}/bin
 mkdir -p ${GSQL_PKG_HOME}/third-party-pkgs
 ${ER_HOME}/buildenv/rest_build.sh ${GSQL_PKG_HOME}/third-party-pkgs
 
+# to streamline a new deployment, we'll also copy configs and scripts to mgnt_cli
 mkdir -p ${GSQL_PKG_HOME}/config
 cp -r ${GSQL_PROJ_HOME}/src/customer/config/* ${GSQL_PKG_HOME}/config
+cp -r ${GSQL_PROJ_HOME}/src/customer/config/* ${GSQL_PKG_HOME}/mgnt_cli/configs
 
 mkdir -p ${GSQL_PKG_HOME}/scripts
 cp -r ${GSQL_PROJ_HOME}/src/customer/scripts/* ${GSQL_PKG_HOME}/scripts
+cp -r ${GSQL_PROJ_HOME}/src/customer/scripts/* ${GSQL_PKG_HOME}/mgnt_cli/scripts
 
+mkdir -p ${GSQL_PKG_HOME}/sanity_check
+cp -r ${GSQL_PROJ_HOME}/src/customer/scripts/* ${GSQL_PKG_HOME}/sanity_check
+mkdir -p ${GSQL_PKG_HOME}/mgnt_cli/sanity_check
+cp -r ${GSQL_PROJ_HOME}/src/customer/scripts/* ${GSQL_PKG_HOME}/mgnt_cli/sanity_check
