--- a/config/pkg.config
+++ b/config/pkg.config
@@ -37,6 +37,6 @@ cp -r ${GSQL_PROJ_HOME}/src/customer/scripts/* ${GSQL_PKG_HOME}/scripts
 cp -r ${GSQL_PROJ_HOME}/src/customer/scripts/* ${GSQL_PKG_HOME}/mgnt_cli/scripts
 
 mkdir -p ${GSQL_PKG_HOME}/sanity_check
-cp -r ${GSQL_PROJ_HOME}/src/customer/scripts/* ${GSQL_PKG_HOME}/sanity_check
+cp -r ${GSQL_PROJ_HOME}/src/customer/sanity_check/* ${GSQL_PKG_HOME}/sanity_check
 mkdir -p ${GSQL_PKG_HOME}/mgnt_cli/sanity_check
-cp -r ${GSQL_PROJ_HOME}/src/customer/scripts/* ${GSQL_PKG_HOME}/mgnt_cli/sanity_check
+cp -r ${GSQL_PROJ_HOME}/src/customer/sanity_check/* ${GSQL_PKG_HOME}/mgnt_cli/sanity_check
