NB-5 added dense hash to get loads to go faster

--- a/config/pkg.config
+++ b/config/pkg.config
@@ -14,9 +14,9 @@
 # - Degree_UseShort_      (degree use short to save space. Default is int)
 #----------------------------------------------------------------------------------------
 
-scons poc_gpe_release        cb=1 # --CPPDEFINES=GraphNodeId_UseLong_,Degree_UseShort_
-scons gse2_release           cb=1 # --CPPDEFINES=GraphNodeId_UseLong_,Degree_UseShort_
-scons poc_gseloader_release  cb=1 # --CPPDEFINES=GraphNodeId_UseLong_,Degree_UseShort_
+scons poc_gpe_release        cb=1 --CPPDEFINES=GOOGLE_DENSEHASHMAP # --CPPDEFINES=GraphNodeId_UseLong_,Degree_UseShort_
+scons gse2_release           cb=1 --CPPDEFINES=GOOGLE_DENSEHASHMAP # --CPPDEFINES=GraphNodeId_UseLong_,Degree_UseShort_
+scons poc_gseloader_release  cb=1 --CPPDEFINES=GOOGLE_DENSEHASHMAP # --CPPDEFINES=GraphNodeId_UseLong_,Degree_UseShort_
 
 mkdir -p ${GSQL_PKG_HOME}/bin
 cp build/release/customer/core_ext/gpe/poc_gpe_server  ${GSQL_PKG_HOME}/bin
