-- [RT-94]  delta rebuild improvement

--- a/config/proj.config
+++ b/config/proj.config
@@ -10,8 +10,8 @@
 # 1. build column is for future feature               #
 #######################################################
 # directory         repo_name    branch  TAG         build
-- src/core/topology  topology    master latest    src
-- src/core/gpe       gpe         master latest    src
+- src/core/topology  topology    deltarebuild latest    src
+- src/core/gpe       gpe         deltarebuild latest    src
 - src/core/gse       gse         master latest    src
 - src/third_party    third_party master latest    src
 - src/utility        utility     master latest    src
