--- a/config/proj.config
+++ b/config/proj.config
@@ -12,7 +12,7 @@
 # directory         repo_name    branch  TAG         build
 - src/core/topology  topology    master latest    src
 - src/core/gpe       gpe         master latest    src
-- src/core/gse       gse         master latest    src
+- src/core/gse       gse         gse_mvme latest    src
 - src/third_party    third_party master latest    src
 - src/utility        utility     master latest    src
 - src/realtime       realtime    master latest    src
