--- a/src/customer/config/graph_config.yaml
+++ b/src/customer/config/graph_config.yaml
@@ -1,5 +1,5 @@
 SegSizeInBits: 20   # partition segment size in bit, default is 2^20 or 1 million
-GraphName: "SimpleWeightedGraph"
+GraphName: "DefaultGraph"
 GraphID: 0          # when give 0, GSE will automatically assign the next ID to this graph
 AttributeEnumerators: 0  # total number of enumerators used by vertex and edge attributes
 VertexTypes:
@@ -11,6 +11,3 @@ EdgeTypes:
     typename: "etype_dummy"
     isdirected: false   # per this type
     attributes:
-      - type: "INT"
-        name: "weight"
-        nullable: false
