--- a/config/pkg.config
+++ b/config/pkg.config
@@ -30,13 +30,13 @@ ${ER_HOME}/buildenv/rest_build.sh ${GSQL_PKG_HOME}/third-party-pkgs
 # to streamline a new deployment, we'll also copy configs and scripts to mgnt_cli
 mkdir -p ${GSQL_PKG_HOME}/config
 cp -r ${GSQL_PROJ_HOME}/src/customer/config/* ${GSQL_PKG_HOME}/config
-cp -r ${GSQL_PROJ_HOME}/src/customer/config/* ${GSQL_PKG_HOME}/mgnt_cli/configs
+cp -r ${GSQL_PROJ_HOME}/src/customer/config/* ${GSQL_PROJ_HOME}/mgnt_cli/configs
 
 mkdir -p ${GSQL_PKG_HOME}/scripts
 cp -r ${GSQL_PROJ_HOME}/src/customer/scripts/* ${GSQL_PKG_HOME}/scripts
-cp -r ${GSQL_PROJ_HOME}/src/customer/scripts/* ${GSQL_PKG_HOME}/mgnt_cli/scripts
+cp -r ${GSQL_PROJ_HOME}/src/customer/scripts/* ${GSQL_PROJ_HOME}/mgnt_cli/scripts
 
 mkdir -p ${GSQL_PKG_HOME}/sanity_check
 cp -r ${GSQL_PROJ_HOME}/src/customer/sanity_check/* ${GSQL_PKG_HOME}/sanity_check
-mkdir -p ${GSQL_PKG_HOME}/mgnt_cli/sanity_check
-cp -r ${GSQL_PROJ_HOME}/src/customer/sanity_check/* ${GSQL_PKG_HOME}/mgnt_cli/sanity_check
+mkdir -p ${GSQL_PROJ_HOME}/mgnt_cli/sanity_check
+cp -r ${GSQL_PROJ_HOME}/src/customer/sanity_check/* ${GSQL_PROJ_HOME}/mgnt_cli/sanity_check
