--- a/config/proj.config
+++ b/config/proj.config
@@ -14,7 +14,7 @@
 - src/core/gpe       gpe         4.1 latest    src
 - src/core/gse       gse         4.1 latest    src
 - src/third_party    third_party master latest    src
-- src/utility        utility     master latest    src
+- src/utility        utility     4.1 latest    src
 - src/realtime       realtime    master latest    src
 - src/msg            msg_layer   master latest    src
 - src/er             er          master latest    src
