[GPE-60] IUM uses ER 4.1

--- a/config/proj.config
+++ b/config/proj.config
@@ -17,4 +17,4 @@
 - src/utility        utility     4.1 latest    src
 - src/realtime       realtime    master latest    src
 - src/msg            msg_layer   master latest    src
-- src/er             er          master latest    src
+- src/er             er          4.1 latest    src
