--- a/config/proj.config
+++ b/config/proj.config
@@ -15,6 +15,6 @@
 - src/core/gse       gse         4.1 latest    src
 - src/third_party    third_party master latest    src
 - src/utility        utility     4.1 latest    src
-- src/realtime       realtime    master latest    src
+- src/realtime       realtime    4.1 latest    src
 - src/msg            msg_layer   master latest    src
 - src/er             er          4.1 latest    src
