RT-136 set up stress test code, made changes to some local data loading scripts.

--- a/config/pkg.config
+++ b/config/pkg.config
@@ -36,7 +36,14 @@ mkdir -p ${GSQL_PKG_HOME}/scripts
 cp -r ${GSQL_PROJ_HOME}/src/customer/scripts/* ${GSQL_PKG_HOME}/scripts
 cp -r ${GSQL_PROJ_HOME}/src/customer/scripts/* ${GSQL_PROJ_HOME}/mgnt_cli/scripts
 
+# copy sanity check folder
 mkdir -p ${GSQL_PKG_HOME}/sanity_check
 cp -r ${GSQL_PROJ_HOME}/src/customer/sanity_check/* ${GSQL_PKG_HOME}/sanity_check
 mkdir -p ${GSQL_PROJ_HOME}/mgnt_cli/sanity_check
 cp -r ${GSQL_PROJ_HOME}/src/customer/sanity_check/* ${GSQL_PROJ_HOME}/mgnt_cli/sanity_check
+
+# copy stress test folder
+mkdir -p ${GSQL_PKG_HOME}/stress_test
+cp -r ${GSQL_PROJ_HOME}/src/customer/stress_test/* ${GSQL_PKG_HOME}/stress_test
+mkdir -p ${GSQL_PROJ_HOME}/mgnt_cli/stress_test
+cp -r ${GSQL_PROJ_HOME}/src/customer/stress_test/* ${GSQL_PROJ_HOME}/mgnt_cli/stress_test
