--- a/src/customer/config/load_test_conf.yaml
+++ b/src/customer/config/load_test_conf.yaml
@@ -2,7 +2,7 @@ GRAPHS:
     current_graph: 0
     graphlist:
     -   id: 0
-        name: alicpn
+        name: mvme
     nextid: 1
     storage: /home/vagrant/gstore
 
