--- a/bin/config
+++ b/bin/config
@@ -3,5 +3,6 @@ SegSizeInBits=20
 # To generate visiualization of the graph schema in pdf format, you need to install graphviz (http://www.graphviz.org/) 
 # on your system, then use "which dot" to find "dot" path, and set the DotDir property like below 
 # e.g. DotDir=/usr/bin/
+DotDir=/usr/bin/
 
 
