[GSE-74] Add NOPOST compiling flag to improve performance

--- a/config/pkg.config
+++ b/config/pkg.config
@@ -12,6 +12,8 @@
 # - G_DENSE_HT_OCCUPANCY_PCT=80 (DenseHashMap factor: 1 to 99. Default 50, opt. is 80)
 # - GraphNodeId_UseLong_  (if # of vertices is more than 4 billion. Default is uint32_t)
 # - Degree_UseShort_      (degree use short to save space. Default is int)
+# - NOPOST   (If the online system doesn't have any POST, add this flag to improve performance)
+# - MULTIEDGETYPES (If the graph schema has multiple edge types, must add this flag. Note no need to multiple vertex types)
 #----------------------------------------------------------------------------------------
 
 scons poc_gpe_release        cb=1 --CPPDEFINES=GOOGLE_DENSEHASHMAP # --CPPDEFINES=GraphNodeId_UseLong_,Degree_UseShort_,MULTIEDGETYPES
