[GSE-60] Online alias

--- a/config/pkg.config
+++ b/config/pkg.config
@@ -14,6 +14,7 @@
 # - Degree_UseShort_      (degree use short to save space. Default is int)
 # - NOPOST   (If the online system doesn't have any POST, add this flag to improve performance)
 # - MULTIEDGETYPES (If the graph schema has multiple edge types, must add this flag. Note no need to multiple vertex types)
+# - ONLINEALIAS    (If alias in online request, all IDS servers need to look for it)
 #----------------------------------------------------------------------------------------
 
 scons poc_gpe_release        cb=1 --CPPDEFINES=GOOGLE_DENSEHASHMAP # --CPPDEFINES=GraphNodeId_UseLong_,Degree_UseShort_,MULTIEDGETYPES
