[GS-1] add outputtokenbuffer size config

--- a/bin/config
+++ b/bin/config
@@ -8,5 +8,6 @@ WorkDir=./work/
 CanonnicalLoader=/vagrant/repo/product/build/release/customer/core_ext/gse/gse_canonnical_loader
 GraphStoreDir=/data/rc4/gstore/0/
 GSELoaderConfig=/data/rc4/config/gse_loader/gse_loader1.conf
+OutputTokenBufferSize=200
 
 
