REQUEST-13 - Improve gnet namespace & RocketMQ integration.

--- a/src/customer/config/graph_config.yaml
+++ b/src/customer/config/graph_config.yaml
@@ -1,49 +1,42 @@
-SegSizeInBits: 20   # partition segment size in bit, default is 2^20 or 1 million
-GraphName: "mvme" 
-GraphID: 0          # when give 0, GSE will automatically assign the next ID to this graph
-AttributeEnumerators: 2  # total number of enumerators used by vertex and edge attributes
-VertexTypes:
-  - id: 0           # no type, put 0 here
-    typename: "vtype0"
-    attributes:     # attribute order matters.
-  - id: 1
-    typename: "vtype1"
-    attributes:
-      - type: "INT"
-        name: "v1_a1"
-        nullable: false
-        fixedsize: 0    # for base data type, fixedsize doesn't matter.
-        enumerator: 1   # this is enumerator ID, from 1 to $attribute_enumerators
-      - type: "BOOL"
-        name: "v1_a2"
-        nullable: false
-        fixedsize: 0
-  - id: 2
-    typename: "vtype2"
-    attributes:
-      - type: "STRING"
-        name: "v2_a1"
-        nullable: false
-        fixedsize: 0    # for base data type, fixedsize doesn't matter.
-        enumerator: 1   # this is enumerator ID, from 1 to $attribute_enumerators
-      - type: "INT"
-        name: "v2_a2"
-        nullable: false
-        fixedsize: 0
-  - id: 3
-    typename: "vtype3"
-    attributes:
-      - type: "INT"
-        name: "v3_a1"
-        nullable: false
-        fixedsize: 0    # for base data type, fixedsize doesn't matter.
-        enumerator: 1   # this is enumerator ID, from 1 to $attribute_enumerators
-      - type: "BOOL"
-        name: "v3_a2"
-        nullable: false
-        fixedsize: 0
-EdgeTypes:
-  - id: 0               # no type, put 0 here.
-    typename: "etype_dummy"
-    isdirected: true   # per this type
-    attributes:
+EdgeTypes: 
+- Attributes: 
+  - AttributeName: e0_a1
+    AttributeType: UINT32
+  EdgeId: 0
+  EdgeName: etype0
+  FromVertexTypeName: vtype0
+  IsDirected: true
+  ToVertexTypeName: vtype0
+- Attributes: 
+  - AttributeName: e1_a1
+    AttributeType: BOOL
+  EdgeId: 1
+  EdgeName: etype1
+  FromVertexTypeName: vtype0
+  IsDirected: false
+  ToVertexTypeName: vtype0
+GraphConfigVersion: 1
+GraphId: 0
+GraphName: mvme
+SegSizeInBits: 20
+VertexTypes: 
+- Attributes: 
+  - AttributeName: v0_a1
+    AttributeType: UINT32
+    Nullable: false
+  PrimaryId: 
+    AttributeName: v0_id
+    AttributeType: STRING
+    Nullable: false
+  VertexId: 0
+  VertexName: vtype0
+- Attributes: 
+  - AttributeName: v1_a1
+    AttributeType: BOOL
+    Nullable: false
+  PrimaryId: 
+    AttributeName: v1_id
+    AttributeType: STRING
+    Nullable: false
+  VertexId: 1
+  VertexName: vtype1
