--- a/config/pkg.config
+++ b/config/pkg.config
@@ -17,9 +17,9 @@
 # - ONLINEALIAS    (If alias in online request, all IDS servers need to look for it)
 #----------------------------------------------------------------------------------------
 
-scons poc_gpe_release        cb=1 --CPPDEFINES=GOOGLE_DENSEHASHMAP # --CPPDEFINES=GraphNodeId_UseLong_,Degree_UseShort_,MULTIEDGETYPES
-scons gse2_release           cb=1 --CPPDEFINES=GOOGLE_DENSEHASHMAP # --CPPDEFINES=GraphNodeId_UseLong_,Degree_UseShort_,MULTIEDGETYPES
-scons poc_gseloader_release  cb=1 --CPPDEFINES=GOOGLE_DENSEHASHMAP # --CPPDEFINES=GraphNodeId_UseLong_,Degree_UseShort_,MULTIEDGETYPES
+scons poc_gpe_release        cb=1 --CPPDEFINES=GOOGLE_DENSEHASHMAP,MULTIEDGETYPES # --CPPDEFINES=GraphNodeId_UseLong_,Degree_UseShort_,MULTIEDGETYPES
+scons gse2_release           cb=1 --CPPDEFINES=GOOGLE_DENSEHASHMAP,MULTIEDGETYPES # --CPPDEFINES=GraphNodeId_UseLong_,Degree_UseShort_,MULTIEDGETYPES
+scons poc_gseloader_release  cb=1 --CPPDEFINES=GOOGLE_DENSEHASHMAP,MULTIEDGETYPES # --CPPDEFINES=GraphNodeId_UseLong_,Degree_UseShort_,MULTIEDGETYPES
 
 mkdir -p ${GSQL_PKG_HOME}/bin
 cp build/release/customer/core_ext/gpe/poc_gpe_server  ${GSQL_PKG_HOME}/bin
