GPE-47 GPE work on poc4_base

--- a/config/proj.config
+++ b/config/proj.config
@@ -10,6 +10,7 @@
 # 1. build column is for future feature               #
 #######################################################
 # directory         repo_name    branch  TAG         build
+- src/olgp      olgp        4.2 latest    src
 - src/core/topology  topology    4.2 latest    src
 - src/core/gpe       gpe         4.2 latest    src
 - src/core/gse       gse         4.2 latest    src
