--- a/config/pkg.config
+++ b/config/pkg.config
@@ -18,11 +18,13 @@
 #----------------------------------------------------------------------------------------
 
 scons poc_gpe_release        cb=1 --CPPDEFINES=GOOGLE_DENSEHASHMAP,MULTIEDGETYPES # --CPPDEFINES=GraphNodeId_UseLong_,Degree_UseShort_,MULTIEDGETYPES
+scons poc_gpp_release        cb=1 --CPPDEFINES=GOOGLE_DENSEHASHMAP,MULTIEDGETYPES # --CPPDEFINES=GraphNodeId_UseLong_,Degree_UseShort_,MULTIEDGETYPES
 scons gse2_release           cb=1 --CPPDEFINES=GOOGLE_DENSEHASHMAP,MULTIEDGETYPES # --CPPDEFINES=GraphNodeId_UseLong_,Degree_UseShort_,MULTIEDGETYPES
 scons poc_gseloader_release  cb=1 --CPPDEFINES=GOOGLE_DENSEHASHMAP,MULTIEDGETYPES # --CPPDEFINES=GraphNodeId_UseLong_,Degree_UseShort_,MULTIEDGETYPES
 
 mkdir -p ${GSQL_PKG_HOME}/bin
 cp build/release/customer/core_impl/gpe_impl/poc_gpe_server  ${GSQL_PKG_HOME}/bin
+cp build/release/customer/core_impl/gpp_impl/poc_gpp_server  ${GSQL_PKG_HOME}/bin
 cp build/release/core/gse/ids_worker ${GSQL_PKG_HOME}/bin
 cp build/release/olgp/gse/gse_loader ${GSQL_PKG_HOME}/bin
 
