[GSE-90] pkg config use the same build env

--- a/config/pkg.config
+++ b/config/pkg.config
@@ -15,19 +15,24 @@
 # - NOPOST   (If the online system doesn't have any POST, add this flag to improve performance)
 # - MULTIEDGETYPES (If the graph schema has multiple edge types, must add this flag. Note no need to multiple vertex types)
 # - ONLINEALIAS    (If alias in online request, all IDS servers need to look for it)
+# - GOOGLE_DENSEHASHMAP or GOOGLE_SPARSEHASHMAP: choose GOOGLE_SPARSEHASHMAP if IDS uses too much memory
 #----------------------------------------------------------------------------------------
+export GSQL_BUILD_SCONS="scons"
+export GSQL_BUILD_FLAGS="cb=1 --CPPDEFINES=GOOGLE_DENSEHASHMAP,MULTIEDGETYPES"
+echo  "CPP build flags: ${GSQL_BUILD_FLAGS}"
+${GSQL_BUILD_SCONS} poc_gpe_release  ${GSQL_BUILD_FLAGS}
+${GSQL_BUILD_SCONS} poc_gpp_release  ${GSQL_BUILD_FLAGS}
+${GSQL_BUILD_SCONS} gse2_release     ${GSQL_BUILD_FLAGS}
+${GSQL_BUILD_SCONS} poc_gseloader_release  ${GSQL_BUILD_FLAGS}
+${GSQL_BUILD_SCONS} poc_gse_canonnical_loader_release ${GSQL_BUILD_FLAGS}
 
-scons poc_gpe_release        cb=1 --CPPDEFINES=GOOGLE_DENSEHASHMAP,MULTIEDGETYPES # --CPPDEFINES=GraphNodeId_UseLong_,Degree_UseShort_,MULTIEDGETYPES
-scons poc_gpp_release        cb=1 --CPPDEFINES=GOOGLE_DENSEHASHMAP,MULTIEDGETYPES # --CPPDEFINES=GraphNodeId_UseLong_,Degree_UseShort_,MULTIEDGETYPES
-scons gse2_release           cb=1 --CPPDEFINES=GOOGLE_DENSEHASHMAP,MULTIEDGETYPES # --CPPDEFINES=GraphNodeId_UseLong_,Degree_UseShort_,MULTIEDGETYPES
-scons poc_gseloader_release  cb=1 --CPPDEFINES=GOOGLE_DENSEHASHMAP,MULTIEDGETYPES # --CPPDEFINES=GraphNodeId_UseLong_,Degree_UseShort_,MULTIEDGETYPES
 
 mkdir -p ${GSQL_PKG_HOME}/bin
 cp build/release/customer/core_impl/gpe_impl/poc_gpe_server  ${GSQL_PKG_HOME}/bin
 cp build/release/customer/core_impl/gpp_impl/poc_gpp_server  ${GSQL_PKG_HOME}/bin
 cp build/release/core/gse/ids_worker ${GSQL_PKG_HOME}/bin
 cp build/release/olgp/gse/gse_loader ${GSQL_PKG_HOME}/bin
-
+cp build/release/olgp/gse/gse_canonnical_loader ${GSQL_PKG_HOME}/bin
 
 mkdir -p ${GSQL_PKG_HOME}/third-party-pkgs
 ${ER_HOME}/buildenv/rest_build.sh ${GSQL_PKG_HOME}/third-party-pkgs
