[GS-1] graph_config.yaml pointing to new loc

--- a/src/customer/config/graph_config.yaml
+++ b/src/customer/config/graph_config.yaml
@@ -1,42 +1,1 @@
-EdgeTypes: 
-- Attributes: 
-  - AttributeName: e0_a1
-    AttributeType: UINT32
-  EdgeId: 0
-  EdgeName: etype0
-  FromVertexTypeName: vtype0
-  IsDirected: true
-  ToVertexTypeName: vtype0
-- Attributes: 
-  - AttributeName: e1_a1
-    AttributeType: BOOL
-  EdgeId: 1
-  EdgeName: etype1
-  FromVertexTypeName: vtype0
-  IsDirected: false
-  ToVertexTypeName: vtype0
-GraphConfigVersion: 1
-GraphId: 0
-GraphName: mvme
-SegSizeInBits: 20
-VertexTypes: 
-- Attributes: 
-  - AttributeName: v0_a1
-    AttributeType: UINT32
-    Nullable: false
-  PrimaryId: 
-    AttributeName: v0_id
-    AttributeType: STRING
-    Nullable: false
-  VertexId: 0
-  VertexName: vtype0
-- Attributes: 
-  - AttributeName: v1_a1
-    AttributeType: BOOL
-    Nullable: false
-  PrimaryId: 
-    AttributeName: v1_id
-    AttributeType: STRING
-    Nullable: false
-  VertexId: 1
-  VertexName: vtype1
+../core_impl/gsql_impl/graph_config.yaml
