--- a/config/pkg.config
+++ b/config/pkg.config
@@ -40,9 +40,9 @@ ${ER_HOME}/buildenv/rest_build.sh ${GSQL_PKG_HOME}/third-party-pkgs
 # to streamline a new deployment, we'll also copy configs and scripts to mgnt_cli
 mkdir -p ${GSQL_PKG_HOME}/config
 cp -r ${GSQL_PROJ_HOME}/src/customer/config/* ${GSQL_PKG_HOME}/config
-cp -r ${GSQL_PROJ_HOME}/src/customer/core_impl/gsql_impl/graph_config.yaml ${GSQL_PKG_HOME}/config
+cp -r --remove-destination ${GSQL_PROJ_HOME}/src/customer/core_impl/gsql_impl/graph_config.yaml ${GSQL_PKG_HOME}/config
 cp -r ${GSQL_PROJ_HOME}/src/customer/config/* ${GSQL_PROJ_HOME}/mgnt_cli/configs
-cp -r ${GSQL_PROJ_HOME}/src/customer/core_impl/gsql_impl/graph_config.yaml ${GSQL_PKG_HOME}/mgnt_cli/config
+cp -r --remove-destination ${GSQL_PROJ_HOME}/src/customer/core_impl/gsql_impl/graph_config.yaml ${GSQL_PKG_HOME}/mgnt_cli/config
 
 mkdir -p ${GSQL_PKG_HOME}/scripts
 cp -r ${GSQL_PROJ_HOME}/src/customer/scripts/* ${GSQL_PKG_HOME}/scripts
