--- a/config/pkg.config
+++ b/config/pkg.config
@@ -42,7 +42,7 @@ mkdir -p ${GSQL_PKG_HOME}/config
 cp -r ${GSQL_PROJ_HOME}/src/customer/config/* ${GSQL_PKG_HOME}/config
 cp -r --remove-destination ${GSQL_PROJ_HOME}/src/customer/core_impl/gsql_impl/graph_config.yaml ${GSQL_PKG_HOME}/config
 cp -r ${GSQL_PROJ_HOME}/src/customer/config/* ${GSQL_PROJ_HOME}/mgnt_cli/configs
-cp -r --remove-destination ${GSQL_PROJ_HOME}/src/customer/core_impl/gsql_impl/graph_config.yaml ${GSQL_PKG_HOME}/mgnt_cli/config
+cp -r --remove-destination ${GSQL_PROJ_HOME}/src/customer/core_impl/gsql_impl/graph_config.yaml ${GSQL_PKG_HOME}/mgnt_cli/configs
 
 mkdir -p ${GSQL_PKG_HOME}/scripts
 cp -r ${GSQL_PROJ_HOME}/src/customer/scripts/* ${GSQL_PKG_HOME}/scripts
