--- a/config/pkg.config
+++ b/config/pkg.config
@@ -27,6 +27,11 @@ ${GSQL_BUILD_SCONS} poc_gseloader_release  ${GSQL_BUILD_FLAGS}
 ${GSQL_BUILD_SCONS} poc_gse_canonnical_loader_release ${GSQL_BUILD_FLAGS}
 
 
+#######################################################################################
+#                                                                                     #
+# No need to change below in most cases                                               #
+#                                                                                     #
+#######################################################################################
 mkdir -p ${GSQL_PKG_HOME}/bin
 cp build/release/customer/core_impl/gpe_impl/poc_gpe_server  ${GSQL_PKG_HOME}/bin
 cp build/release/customer/core_impl/gpp_impl/poc_gpp_server  ${GSQL_PKG_HOME}/bin
@@ -39,23 +44,25 @@ ${ER_HOME}/buildenv/rest_build.sh ${GSQL_PKG_HOME}/third-party-pkgs
 
 # to streamline a new deployment, we'll also copy configs and scripts to mgnt_cli
 mkdir -p ${GSQL_PKG_HOME}/config
-cp -r ${GSQL_PROJ_HOME}/src/customer/config/* ${GSQL_PKG_HOME}/config
-cp -r --remove-destination ${GSQL_PROJ_HOME}/src/customer/core_impl/gsql_impl/graph_config.yaml ${GSQL_PKG_HOME}/config
-cp -r ${GSQL_PROJ_HOME}/src/customer/config/* ${GSQL_PROJ_HOME}/mgnt_cli/configs
-cp -r --remove-destination ${GSQL_PROJ_HOME}/src/customer/core_impl/gsql_impl/graph_config.yaml ${GSQL_PKG_HOME}/mgnt_cli/configs
+cp -RL ${GSQL_PROJ_HOME}/src/customer/config/* ${GSQL_PKG_HOME}/config
+cp -RL ${GSQL_PROJ_HOME}/src/customer/config/* ${GSQL_PROJ_HOME}/mgnt_cli/configs
 
 mkdir -p ${GSQL_PKG_HOME}/scripts
-cp -r ${GSQL_PROJ_HOME}/src/customer/scripts/* ${GSQL_PKG_HOME}/scripts
-cp -r ${GSQL_PROJ_HOME}/src/customer/scripts/* ${GSQL_PROJ_HOME}/mgnt_cli/scripts
+cp -RL ${GSQL_PROJ_HOME}/src/customer/scripts/* ${GSQL_PKG_HOME}/scripts
+cp -RL ${GSQL_PROJ_HOME}/src/customer/scripts/* ${GSQL_PROJ_HOME}/mgnt_cli/scripts
 
 # copy sanity check folder
 mkdir -p ${GSQL_PKG_HOME}/sanity_check
-cp -r ${GSQL_PROJ_HOME}/src/customer/sanity_check/* ${GSQL_PKG_HOME}/sanity_check
+cp -RL ${GSQL_PROJ_HOME}/src/customer/sanity_check/* ${GSQL_PKG_HOME}/sanity_check
 mkdir -p ${GSQL_PROJ_HOME}/mgnt_cli/sanity_check
-cp -r ${GSQL_PROJ_HOME}/src/customer/sanity_check/* ${GSQL_PROJ_HOME}/mgnt_cli/sanity_check
+cp -RL ${GSQL_PROJ_HOME}/src/customer/sanity_check/* ${GSQL_PROJ_HOME}/mgnt_cli/sanity_check
 
 # copy stress test folder
 mkdir -p ${GSQL_PKG_HOME}/stress_test
-cp -r ${GSQL_PROJ_HOME}/src/customer/stress_test/* ${GSQL_PKG_HOME}/stress_test
+cp -RL ${GSQL_PROJ_HOME}/src/customer/stress_test/* ${GSQL_PKG_HOME}/stress_test
 mkdir -p ${GSQL_PROJ_HOME}/mgnt_cli/stress_test
-cp -r ${GSQL_PROJ_HOME}/src/customer/stress_test/* ${GSQL_PROJ_HOME}/mgnt_cli/stress_test
+cp -RL ${GSQL_PROJ_HOME}/src/customer/stress_test/* ${GSQL_PROJ_HOME}/mgnt_cli/stress_test
+
+# copy gsql DDL
+mkdir -p ${GSQL_PKG_HOME}/gsql
+cp -RL ${GSQL_PROJ_HOME}/gsql/* ${GSQL_PKG_HOME}/gsql
