[IUM-12] Support DDL and its env

--- a/config/pkg.config
+++ b/config/pkg.config
@@ -45,23 +45,23 @@ ${ER_HOME}/buildenv/rest_build.sh ${GSQL_PKG_HOME}/third-party-pkgs
 # to streamline a new deployment, we'll also copy configs and scripts to mgnt_cli
 mkdir -p ${GSQL_PKG_HOME}/config
 cp -RL ${GSQL_PROJ_HOME}/src/customer/config/* ${GSQL_PKG_HOME}/config
-cp -RL ${GSQL_PROJ_HOME}/src/customer/config/* ${GSQL_PROJ_HOME}/mgnt_cli/configs
+#cp -RL ${GSQL_PROJ_HOME}/src/customer/config/* ${GSQL_PROJ_HOME}/mgnt_cli/configs
 
 mkdir -p ${GSQL_PKG_HOME}/scripts
 cp -RL ${GSQL_PROJ_HOME}/src/customer/scripts/* ${GSQL_PKG_HOME}/scripts
-cp -RL ${GSQL_PROJ_HOME}/src/customer/scripts/* ${GSQL_PROJ_HOME}/mgnt_cli/scripts
+#cp -RL ${GSQL_PROJ_HOME}/src/customer/scripts/* ${GSQL_PROJ_HOME}/mgnt_cli/scripts
 
 # copy sanity check folder
 mkdir -p ${GSQL_PKG_HOME}/sanity_check
 cp -RL ${GSQL_PROJ_HOME}/src/customer/sanity_check/* ${GSQL_PKG_HOME}/sanity_check
-mkdir -p ${GSQL_PROJ_HOME}/mgnt_cli/sanity_check
-cp -RL ${GSQL_PROJ_HOME}/src/customer/sanity_check/* ${GSQL_PROJ_HOME}/mgnt_cli/sanity_check
+#mkdir -p ${GSQL_PROJ_HOME}/mgnt_cli/sanity_check
+#cp -RL ${GSQL_PROJ_HOME}/src/customer/sanity_check/* ${GSQL_PROJ_HOME}/mgnt_cli/sanity_check
 
 # copy stress test folder
 mkdir -p ${GSQL_PKG_HOME}/stress_test
 cp -RL ${GSQL_PROJ_HOME}/src/customer/stress_test/* ${GSQL_PKG_HOME}/stress_test
-mkdir -p ${GSQL_PROJ_HOME}/mgnt_cli/stress_test
-cp -RL ${GSQL_PROJ_HOME}/src/customer/stress_test/* ${GSQL_PROJ_HOME}/mgnt_cli/stress_test
+#mkdir -p ${GSQL_PROJ_HOME}/mgnt_cli/stress_test
+#cp -RL ${GSQL_PROJ_HOME}/src/customer/stress_test/* ${GSQL_PROJ_HOME}/mgnt_cli/stress_test
 
 # copy gsql DDL
 mkdir -p ${GSQL_PKG_HOME}/gsql
