--- a/config/pkg.config
+++ b/config/pkg.config
@@ -65,4 +65,5 @@ cp -RL ${GSQL_PROJ_HOME}/src/customer/stress_test/* ${GSQL_PKG_HOME}/stress_test
 
 # copy gsql DDL
 mkdir -p ${GSQL_PKG_HOME}/gsql
+cd  ${GSQL_PROJ_HOME}/gsql; ./build_all; cd -
 cp -RL ${GSQL_PROJ_HOME}/gsql/* ${GSQL_PKG_HOME}/gsql
