[IUM-12] 4.2 default use multi-edge types

--- a/config/pkg.config
+++ b/config/pkg.config
@@ -13,7 +13,9 @@
 # - GraphNodeId_UseLong_  (if # of vertices is more than 4 billion. Default is uint32_t)
 # - Degree_UseShort_      (degree use short to save space. Default is int)
 # - NOPOST   (If the online system doesn't have any POST, add this flag to improve performance)
-# - MULTIEDGETYPES (If the graph schema has multiple edge types, must add this flag. Note no need to multiple vertex types)
+# - SINGLEEDGETYPE or MULTIEDGETYPES (multiple edge types or not. Single edge type will use less memory and better perf.)
+#      if SINGLEEDGETYPE and no MULTIEDGETYPES: no edge type
+#      all other case (none of either, has MULTIEDGETYPES only, or have both): multiple edge types
 # - ONLINEALIAS    (If alias in online request, all IDS servers need to look for it)
 # - GOOGLE_DENSEHASHMAP or GOOGLE_SPARSEHASHMAP: choose GOOGLE_SPARSEHASHMAP if IDS uses too much memory
 #----------------------------------------------------------------------------------------
