--- a/config/pkg.config
+++ b/config/pkg.config
@@ -20,7 +20,7 @@
 # - GOOGLE_DENSEHASHMAP or GOOGLE_SPARSEHASHMAP: choose GOOGLE_SPARSEHASHMAP if IDS uses too much memory
 #----------------------------------------------------------------------------------------
 export GSQL_BUILD_SCONS="scons"
-export GSQL_BUILD_FLAGS="cb=1 --CPPDEFINES=GOOGLE_DENSEHASHMAP,MULTIEDGETYPES"
+export GSQL_BUILD_FLAGS="cb=1 --CPPDEFINES=GOOGLE_DENSEHASHMAP,MULTIEDGETYPES,__STDC_FORMAT_MACROS"
 echo  "CPP build flags: ${GSQL_BUILD_FLAGS}"
 ${GSQL_BUILD_SCONS} poc_gpe_release  ${GSQL_BUILD_FLAGS}
 ${GSQL_BUILD_SCONS} poc_gpp_release  ${GSQL_BUILD_FLAGS}
