REQUEST-24 - dump graph tool

--- a/config/pkg.config
+++ b/config/pkg.config
@@ -27,6 +27,7 @@ ${GSQL_BUILD_SCONS} poc_gpp_release  ${GSQL_BUILD_FLAGS}
 ${GSQL_BUILD_SCONS} gse2_release     ${GSQL_BUILD_FLAGS}
 ${GSQL_BUILD_SCONS} poc_gseloader_release  ${GSQL_BUILD_FLAGS}
 ${GSQL_BUILD_SCONS} poc_gse_canonnical_loader_release ${GSQL_BUILD_FLAGS}
+${GSQL_BUILD_SCONS} graphdump_release ${GSQL_BUILD_FLAGS}
 
 
 #######################################################################################
@@ -40,6 +41,7 @@ cp build/release/customer/core_impl/gpp_impl/poc_gpp_server  ${GSQL_PKG_HOME}/bi
 cp build/release/core/gse/ids_worker ${GSQL_PKG_HOME}/bin
 cp build/release/olgp/gse/gse_loader ${GSQL_PKG_HOME}/bin
 cp build/release/olgp/gse/gse_canonnical_loader ${GSQL_PKG_HOME}/bin
+cp build/release/olgp/tools/graphdump ${GSQL_PKG_HOME}/bin
 
 mkdir -p ${GSQL_PKG_HOME}/third-party-pkgs
 ${ER_HOME}/buildenv/rest_build.sh ${GSQL_PKG_HOME}/third-party-pkgs
