[GSE-97] gse dump ids

--- a/config/pkg.config
+++ b/config/pkg.config
@@ -39,6 +39,7 @@ mkdir -p ${GSQL_PKG_HOME}/bin
 cp build/release/customer/core_impl/gpe_impl/poc_gpe_server  ${GSQL_PKG_HOME}/bin
 cp build/release/customer/core_impl/gpp_impl/poc_gpp_server  ${GSQL_PKG_HOME}/bin
 cp build/release/core/gse/ids_worker ${GSQL_PKG_HOME}/bin
+cp build/release/core/gse/ids_worker ${GSQL_PKG_HOME}/bin/gse_dump
 cp build/release/olgp/gse/gse_loader ${GSQL_PKG_HOME}/bin
 cp build/release/olgp/gse/gse_canonnical_loader ${GSQL_PKG_HOME}/bin
 cp build/release/olgp/tools/graphdump ${GSQL_PKG_HOME}/bin
