--[RT-94] delta rebuild improvement

--- a/config/pkg.config
+++ b/config/pkg.config
@@ -28,12 +28,14 @@ ${GSQL_BUILD_SCONS} gse2_release     ${GSQL_BUILD_FLAGS}
 ${GSQL_BUILD_SCONS} poc_gseloader_release  ${GSQL_BUILD_FLAGS}
 ${GSQL_BUILD_SCONS} poc_gse_canonnical_loader_release ${GSQL_BUILD_FLAGS}
 ${GSQL_BUILD_SCONS} graphdump_release ${GSQL_BUILD_FLAGS}
+${GSQL_BUILD_SCONS} batchdelta_release ${GSQL_BUILD_FLAGS}
 
 
 #######################################################################################
 #                                                                                     #
 # No need to change below in most cases                                               #
-#                                                                                     #
+#                                                      
+                               #
 #######################################################################################
 mkdir -p ${GSQL_PKG_HOME}/bin
 cp build/release/customer/core_impl/gpe_impl/poc_gpe_server  ${GSQL_PKG_HOME}/bin
@@ -43,6 +45,7 @@ cp build/release/core/gse/ids_worker ${GSQL_PKG_HOME}/bin/gse_dump
 cp build/release/olgp/gse/gse_loader ${GSQL_PKG_HOME}/bin
 cp build/release/olgp/gse/gse_canonnical_loader ${GSQL_PKG_HOME}/bin
 cp build/release/olgp/tools/graphdump ${GSQL_PKG_HOME}/bin
+cp build/release/olgp/tools/batchdelta ${GSQL_PKG_HOME}/bin
 
 mkdir -p ${GSQL_PKG_HOME}/third-party-pkgs
 ${ER_HOME}/buildenv/rest_build.sh ${GSQL_PKG_HOME}/third-party-pkgs
