--- a/gdk/config/sdk_resource.cfg
+++ b/gdk/config/sdk_resource.cfg
@@ -1,4 +1,5 @@
 # This file lists the URL and account to fetch the SDK
 # myVar=$(grep -Po "(?<=^HereIsAKey ).*" file)
-kent: gsdk_user@192.168.21.34
-mtv:  gsdk_user@192.168.11.34 
+kent: ftp://192.168.22.10/
+mtv:  ftp://192.168.11.10
+local: ../deploy_gsdk
