[CST-237] add gsdk package

--- a/gdk/config/pkg.config
+++ b/gdk/config/pkg.config
@@ -19,11 +19,10 @@
 # - ONLINEALIAS    (If alias in online request, all IDS servers need to look for it)
 # - GOOGLE_DENSEHASHMAP or GOOGLE_SPARSEHASHMAP: choose GOOGLE_SPARSEHASHMAP if IDS uses too much memory
 #----------------------------------------------------------------------------------------
-export GSQL_BUILD_SCONS="scons"
-export GSQL_BUILD_FLAGS="cb=1 --CPPDEFINES=GOOGLE_SPARSEHASHMAP,HEX_UID_LOWERCASE,SINGLEEDGETYPE,__STDC_FORMAT_MACROS"
+export GSQL_BUILD_FLAGS="cb=1 --CPPDEFINES=_STDC_FORMAT_MACROS"
 echo  "CPP build flags: ${GSQL_BUILD_FLAGS}"
-${GSQL_BUILD_SCONS} poc_gpe_release  ${GSQL_BUILD_FLAGS}
-
+make -f MakeGPE clean
+make -f MakeGPE
 
 #######################################################################################
 #                                                                                     #
@@ -31,37 +30,26 @@ ${GSQL_BUILD_SCONS} poc_gpe_release  ${GSQL_BUILD_FLAGS}
 #                                                                                     #
 #######################################################################################
 mkdir -p ${GSQL_PKG_HOME}/bin
-cp build/release/customer/core_impl/gpe_impl/poc_gpe_server  ${GSQL_PKG_HOME}/bin
-cp build/release/customer/core_impl/gpp_impl/poc_gpp_server  ${GSQL_PKG_HOME}/bin
-cp build/release/core/gse/ids_worker ${GSQL_PKG_HOME}/bin
-cp build/release/core/gse/ids_worker ${GSQL_PKG_HOME}/bin/gse_dump
-cp build/release/olgp/gse/gse_loader ${GSQL_PKG_HOME}/bin
-cp build/release/olgp/gse/gse_canonnical_loader ${GSQL_PKG_HOME}/bin
-cp build/release/olgp/tools/graphdump ${GSQL_PKG_HOME}/bin
+cp -RL gsdk/bin/release/* ${GSQL_PKG_HOME}/bin
+cp -RL bin/release/* ${GSQL_PKG_HOME}/bin
 
 mkdir -p ${GSQL_PKG_HOME}/third-party-pkgs
 ${ER_HOME}/buildenv/rest_build.sh ${GSQL_PKG_HOME}/third-party-pkgs
 
-# to streamline a new deployment, we'll also copy configs and scripts to mgnt_cli
+# to streamline a new deployment, copy configs
 mkdir -p ${GSQL_PKG_HOME}/config
 cp -RL ${GSQL_PROJ_HOME}/src/customer/config/* ${GSQL_PKG_HOME}/config
-#cp -RL ${GSQL_PROJ_HOME}/src/customer/config/* ${GSQL_PROJ_HOME}/mgnt_cli/configs
 
 mkdir -p ${GSQL_PKG_HOME}/scripts
 cp -RL ${GSQL_PROJ_HOME}/src/customer/scripts/* ${GSQL_PKG_HOME}/scripts
-#cp -RL ${GSQL_PROJ_HOME}/src/customer/scripts/* ${GSQL_PROJ_HOME}/mgnt_cli/scripts
 
 # copy sanity check folder
 mkdir -p ${GSQL_PKG_HOME}/sanity_check
 cp -RL ${GSQL_PROJ_HOME}/src/customer/sanity_check/* ${GSQL_PKG_HOME}/sanity_check
-#mkdir -p ${GSQL_PROJ_HOME}/mgnt_cli/sanity_check
-#cp -RL ${GSQL_PROJ_HOME}/src/customer/sanity_check/* ${GSQL_PROJ_HOME}/mgnt_cli/sanity_check
 
 # copy stress test folder
 mkdir -p ${GSQL_PKG_HOME}/stress_test
 cp -RL ${GSQL_PROJ_HOME}/src/customer/stress_test/* ${GSQL_PKG_HOME}/stress_test
-#mkdir -p ${GSQL_PROJ_HOME}/mgnt_cli/stress_test
-#cp -RL ${GSQL_PROJ_HOME}/src/customer/stress_test/* ${GSQL_PROJ_HOME}/mgnt_cli/stress_test
 
 # copy gsql DDL
 mkdir -p ${GSQL_PKG_HOME}/gsql
