--- a/gdk/config/pkg.config
+++ b/gdk/config/pkg.config
@@ -19,8 +19,8 @@
 # - ONLINEALIAS    (If alias in online request, all IDS servers need to look for it)
 # - GOOGLE_DENSEHASHMAP or GOOGLE_SPARSEHASHMAP: choose GOOGLE_SPARSEHASHMAP if IDS uses too much memory
 #----------------------------------------------------------------------------------------
-export GSQL_BUILD_FLAGS="cb=1 --CPPDEFINES=_STDC_FORMAT_MACROS"
-echo  "CPP build flags: ${GSQL_BUILD_FLAGS}"
+#export GSQL_BUILD_FLAGS="cb=1 --CPPDEFINES=_STDC_FORMAT_MACROS"
+#echo  "CPP build flags: ${GSQL_BUILD_FLAGS}"
 make -f MakeGPE clean
 make -f MakeGPE
 
